--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Jiafei Lyu"
-  avatar           : "profile.png"
+  avatar           : "JiafeiLyu.jpg"
   bio              : "Ph.D. student at Tsinghua University"
   location         : "Shenzhen, China"
   employer         : "Tsinghua Shenzhen International Graduate School, Tsinghua University"
