--- a/_config.yml
+++ b/_config.yml
@@ -81,10 +81,10 @@ analytics:
 # Site Author
 author:
   name             : "Jiafei Lyu"
-  avatar           : "JiafeiLyu.jpg"
+  avatar           : "profile.png"
   bio              : "Ph.D. student at Tsinghua University"
   location         : "Shenzhen, China"
-  employer         : "Tsinghua Shenzhen International Graduate School, Tsinghua University"
+  employer         : "Tsinghua University"
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=bfgCMr8AAAAJ&hl=en"
   email            : "dmksjfl@gmail.com"
