--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "https://www.linkedin.cn/incareer/in/ACoAADH3yGwB5hdWQAgwznx9uKCVxkfVz-wJpcw"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
