--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /#collaborators   
 
   - title: "Honors"
-    url: /#honors    
+    url: /#honors and awards    
     
   - title: "Educations"
     url: /#educations
