--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ main:
     url: /#collaborators   
 
   - title: "Honors"
-    url: /#honorsandawards    
+    url: /#honors   
     
   - title: "Educations"
     url: /#educations
